Fixed text behind box not aligned Used max-width to match the width of the blue box Used flexbox, flex-direction column to keep the text behind the blue box

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,35 +105,72 @@ button {
 
 .bod_bod {
     display: flex;
-    gap: 20px;
+    flex-direction: row;
+    gap: 40px;
     padding: 0px;
     margin: 0px;
-    justify-content: center;
+    justify-content:center;
 }
 
 .in_bod_bod {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
     gap: 5px;
+    margin: 0px;
+    padding: 0px;
 }
 
 .box_in_bod {
-    display: flex;
     background-color: white;
     border: 3px solid #3882F6;
     width: 130px;
-    height: 150px;
+    height: 130px;
     border-radius: 10px;
+    margin: 0px;
+    padding: 0px;
 }
 
 .bod_text {
     display: flex;
     justify-content: center;
-    max-width: 200px;
-    padding: 0px 35px 0px 30px;
-    margin-right: auto;
-    margin-left: auto;
+    max-width: 130px;
+    /* margin-right: auto;
+    margin-left: auto; */
     text-align: center;
-    /* background-color: green; */
 }
+
+/* .box {
+    background-color: white;
+    border: 3px solid #3882F6;
+    width: 130px;
+    height: 130px;
+    border-radius: 10px;
+}
+
+.inner_box {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.inner_box_text {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.box_text {
+    display: flex;
+    max-width: 200px;
+    text-align: center;
+    background-color: orange;
+    border: 1px solid black;
+}
+
+.full_box {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+} */
